[package]
name = "lib0xhaust-sys"
version = "0.1.0"
authors = ["base0x10 <jespy@gwu.edu>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
bindgen = "0.54.0"
cc = "1.0"

[profile.release]
debug = true
